# image_viewer

./: .gitignore  README.md  app.py  pyproject.toml
static/thumbnails/: .gitkeep
templates/: image.html  index.html  layout.html  upload.html
